Added Online Support

--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Logger import logger"
+    "from Logger import OnlineLogger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "logger.start(\"Test_Notebook.ipynb\")"
+    "OnlineLogger.start(\"Test_Notebook.ipynb\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "10"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,14 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "Hello!\n",
+      "Posted!\n",
+      "Posted!\n"
      ]
     }
    ],
