--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -25,8 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Consent granted: logging will occur\n",
-      "{'message': 'log recorded'}\n"
+      "Consent granted: logging will occur\n"
      ]
     }
    ],
