--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -64,6 +64,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\".csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
