--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "OnlineLogger.start(\"Test_Notebook.ipynb\")"
+    "OnlineLogger.start(\"Test_Notebook.ipynb\", \"Course_ID\")"
    ]
   },
   {
