--- a/Test_Pull.ipynb
+++ b/Test_Pull.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
     "    \"password\": \"password\",\n",
     "    \"skip\": 0,\n",
     "    \"limit\": 100,\n",
-    "    \"course_id\": \"NoCourseSpecified\"\n",
+    "    \"course_id\": \"Spring-2021-Titanic-Python-1\"\n",
     "  }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,33 +83,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in ret_json['logs']:\n",
+    "    print(i['timestamp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-01-28 18:34:54.820019\n",
-      "2021-01-28 18:38:35.612022\n",
-      "2021-01-28 18:36:35.887303\n",
-      "2021-02-16 19:09:06.631395\n",
-      "2021-01-28 18:40:36.648499\n",
-      "2021-01-28 18:34:43.168450\n",
-      "2021-01-28 18:36:02.996362\n",
-      "2021-01-28 18:34:41.225753\n",
-      "2021-01-28 18:36:07.182710\n",
-      "2021-02-16 19:10:27.850128\n",
-      "2021-01-28 18:37:30.951044\n",
-      "2021-02-16 19:12:13.122322\n",
-      "2021-02-16 19:13:08.999876\n",
-      "2021-02-16 19:09:31.077301\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'logs': []}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in ret_json['logs']:\n",
-    "    print(i['timestamp'])"
+    "ret_json"
    ]
   },
   {
